# catan

./: CHANGELOG.md  LICENSE  catan.cabal
app/: Main.hs
src/: Catan.hs
