cabal-version:      3.4
name:               catan
version:            0.1.0.0
synopsis:           A statistical analysis of settlers of catan
-- description:
homepage:           https://eagely.dev/catan
license:            MIT
license-file:       LICENSE
author:             Artemiy Smirnov
maintainer:         artemiy.smirnov@proton.me
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable catan
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
