cabal-version:      3.4
name:               catan
version:            0.1.0.0
synopsis:           A statistical analysis of settlers of catan
-- description:
homepage:           https://eagely.dev/catan
license:            MIT
license-file:       LICENSE
author:             Artemiy Smirnov
maintainer:         artemiy.smirnov@proton.me
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Catan
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable catan
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        catan
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite catan-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        catan
